--- a/Home_Window_11.11.html
+++ b/Home_Window_11.11.html
@@ -89,6 +89,7 @@
         PrinT: function(){
             window.print();
             SecNewWin.close();
+            NewWindow.close();
         }
 
 
