--- a/game/game3.html
+++ b/game/game3.html
@@ -1,53 +1,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<style>
-/*img {
-    position: absolute;
-    z-index: 0;
-}
-map {
-    position: absolute;
-    z-index: 1;
-}*/
-#contentGame {
-    display: flex;
-    flex-direction:row ;
-    width: 1200px;
-    height: 700px;
-    margin-left: 50px;
-}
-#contentMain {
-    width: 900px;
-    height: 600px;
-    border: 1px solid black;
-    background-image: url('images/foni/1.jpg');
-    position: relative;
-
-}
-
-    #bottomPanel {
-        display: flex;
-        justify-content: center;
-        align-items:  center;
-        width: 900px;
-        height: 100px;
-        border: 1px solid black;
-
-    }
-    #contentRight {
-        display: flex;
-        flex-direction: column;
-        align-items:  center;
-        justify-content: center;
-        width: 300px;
-        height: 700px;
-        border: 1px solid black;
+        <link rel="stylesheet" href="style_game.css">
 
 
-    }
-
-</style>
 
 </head>
 <body>
@@ -58,22 +14,27 @@ map {
         <div id="contentMain">
 
 
-                    <map name="mapCat" id="mapCat">
+                    <map name="cat" id="mapCat">
                         <area shape="poly" coords="31, 77, 12, 60, 10, 42, 10, 24, 24, 17, 43, 7, 56, 1, 64, 11, 81, 17, 88, 27, 96, 39, 112, 44, 129, 67, 137, 92, 127, 107, 141, 113, 147, 131, 149, 141, 148, 144, 137, 144, 125, 141, 117, 136, 109, 125, 95, 130, 100, 140, 82, 147, 79, 138, 79, 128, 62, 118, 50, 106, 48, 119, 46, 127, 36, 123, 25, 107, 32, 103, 37, 90, 37, 84" />
                     </map>
 
-            <!--
-                                 <img src='images/dreamsCatcher.png'  alt="" usemap="#dreamCatch" id="jar"/>
-                                <map name="dreamCatch" id="mapDreamCatch">
-                                    <area shape="poly" coords="187, 73, 198, 94, 189, 115, 192, 150, 197, 168, 186, 182, 183, 197, 188, 221, 173, 245, 159, 290, 139, 287, 124, 243, 109, 222, 116, 189, 104, 170, 94, 152, 96, 129, 90, 96, 109, 73, 150, 64, 150, 64" />
-                                    <area shape="circle" coo"144, 61, 48" />
+                    <map name="dreamCatch" id="dreamCatch">
+                        <area shape="poly" coords="51, 36, 44, 43, 46, 76, 53, 92, 50, 105, 54, 115, 63, 131, 76, 134, 83, 115, 90, 101, 90, 91, 94, 70, 95, 49, 91, 40, 68, 31" />
+                        <area shape="circle" coords="67, 28, 23" />
                                 </map>
-            <!--
-                                <img  alt="" usemap="#jar" id="jar"/>
-                                <map name="jar" id="mapJar">
-                                    <area shape="poly" coords="57, 65, 70, 40, 107, 21, 149, 16, 212, 17, 247, 30, 249, 58, 253, 105, 249, 143, 258, 194, 203, 281, 100, 277, 66, 229, 42, 168, 54, 125, 56, 93, 60, 88" />
-                                </map>
-            -->
+
+                    <map name="jar" id="jar">
+                    <area shape="poly" coords="57, 65, 70, 40, 107, 21, 149, 16, 212, 17, 247, 30, 249, 58, 253, 105, 249, 143, 258, 194, 203, 281, 100, 277, 66, 229, 42, 168, 54, 125, 56, 93, 60, 88" />
+                     </map>
+
+
+                      <map name="plane" id="plane">
+                <area shape="poly" coords="6, 63, 6, 53, 14, 49, 21, 51, 20, 42, 24, 36, 28, 34, 31, 27, 39, 24, 49, 24, 57, 30, 57, 31, 70, 24, 77, 24, 86, 30, 89, 35, 89, 47, 80, 53, 82, 61, 79, 68, 69, 67, 59, 70, 61, 78, 52, 85, 44, 80, 31, 83, 23, 83, 19, 74, 11, 74, 2, 69" />
+            </map>
+
+                       <map name="worm" id="worm">
+                <area shape="poly" coords="23, 16, 18, 20, 5, 23, 2, 32, 4, 44, 13, 46, 18, 46, 25, 47, 39, 46, 46, 38, 48, 15, 46, 10, 24, 10" />
+            </map>
 
 
         </div>
@@ -85,157 +46,6 @@ map {
 </div>
 
 
-<script>
-
-
-
-
-  /*  var imgBottomName = [];
-    var imgRightName= [];
-    var imgMapName= [];*/
-    var imgMainName = [];
-
- /*   var mapMain = document.getElementsByTagName('map');
-    var imgGeneral = document.querySelectorAll('#contentMain img');
-    var imgBottom = document.querySelectorAll('#bottomPanel img');
-    var imgRight = document.querySelectorAll('#contentRight img');
-
-*/
-function Item (name, src, usemap){
-    this.name = name;
-    this.src= src;
-    this.usemap = usemap;
-    this.drawImg = function(){
-        var img = document.createElement('img');
-        img.src = this.src;
-        img.name = this.name;
-        img.usemap= this.usemap;
-        document.getElementById('contentMain').appendChild(img);
-        //img.style.left = "150";
-        //img.style.top = "370";
-        imgMainName.push(img.name)
-    }
-}
-
-
-var cat = new Item ("cat", "images/cat.png", "#mapCat");
-        cat.drawImg();
-
-
-
-document.querySelector("#mapCat")
-        .addEventListener("click", function(){
-            //var bottomCat = document.getElementById("bottomPanel").querySelector('img[name="cat"]');
-            console.log("hi")
-            //document.getElementById("bottomPanel").removeChild(bottomCat)
-        });
-
-
-
-
-  /*
-
-   function getMapNames (){
-   for(var j=0; j<mapMain.length; j++){
-   imgMapName.push(mapMain[j].name);
-   }
-   }getMapNames();
-   //console.log(imgMapName)
-
-
-   var generalImgProperties = {
-   src: ["images/cat.png", "images/dreamsCatcher.png", "images/pitcher.png"],
-   name: ["cat", "dreamsCatch", "jar"],
-   width: 300,
-   height:300
-   };
-
-
-   function createImgGeneral (){
-
-   for(var i=0; i<imgGeneral.length; i++){
-   imgGeneral[i].src= generalImgProperties.src[i];
-   imgGeneral[i].name = generalImgProperties.name[i];
-   imgMainName.push(imgGeneral[i].name)
-   }
-   }createImgGeneral();
-
-
-
-   function createImgBotoom () {
-
-   for(var i=0; i<generalImgProperties.src.length; i++){
-
-   var img = document.createElement('img');
-   img.src = generalImgProperties.src[i];
-   img.width = 0.5*generalImgProperties.width;
-   img.height = 0.5*generalImgProperties.height;
-   img.name = generalImgProperties.name[i];
-   document.getElementById('bottomPanel').appendChild(img);
-   imgBottomName.push(img.name)
-   }
-   }createImgBotoom ();
-
-   //console.log(imgBottomName[0].name);
-
-   // console.log(imgBottomName)
-
-   function createImgRight () {
-
-   for(var i=0; i<generalImgProperties.src.length; i++){
-
-   var img = document.createElement('img');
-   img.src = generalImgProperties.src[i];
-   img.width = 0.5*generalImgProperties.width;
-   img.height = 0.5*generalImgProperties.height;
-   img.name = generalImgProperties.name[i];
-   img.style.opacity = 0.5;
-   document.getElementById('contentRight').appendChild(img);
-   imgRightName.push(img.name)
-   }
-   } createImgRight ();
-
-   // console.log(imgRightName[1].name);
-
-
-
-   */
-
-
-/*
-
-
-
-    for(var i=0; i<imgBottomName.length; i++){
-
-        mapMain[i].addEventListener("click", function(){
-            var currentName = this.name;
-            //console.log(imgMapName.indexOf(currentName))
-            if(imgBottomName.indexOf(currentName) != -1){
-
-                console.log("a");
-                //imgBottomName.splice(i,1);
-            }
-
-
-
-        })
-    }
-*/
-
-//console.log(imgBottomName)
-
-
-
-
-
-
-
-
-</script>
-
-
-
-
+<script src="game.js"></script>
 </body>
 </html>
