--- a/game/game3.html
+++ b/game/game3.html
@@ -46,6 +46,7 @@
 </div>
 
 <script src="create_Items.js"></script>
+<script src="create_bottom_and_Right_Items.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
