--- a/game/game3.html
+++ b/game/game3.html
@@ -44,7 +44,8 @@
     <div id="contentRight"></div>
 
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="random.js"></script>
 <script src="create_Items.js"></script>
 <script src="create_bottom_and_Right_Items.js"></script>
 <script src="game.js"></script>
