add invalid timer

--- a/game/game3.html
+++ b/game/game3.html
@@ -45,7 +45,15 @@
 
 </div>
 
-<div id="timer"></div>
+<div id="timer">
+
+<span class="mins">2</span>
+    <span> : </span>
+    <span class="sec">00</span>
+
+<button>Start</button>
+
+</div>
 
 
 
