--- a/game/game first.html
+++ b/game/game first.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-        <link rel="stylesheet" href="style_game.css">
+        <link rel="stylesheet" href="style.css">
 
 
 
@@ -45,24 +45,23 @@
 
 </div>
 
+
 <div id="timer">
 
-<span class="mins">2</span>
+    <span class="mins">2</span>
     <span> : </span>
     <span class="sec">00</span>
 
-<button>Start</button>
+    <button>Start</button>
 
 </div>
-
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="timer.js"></script>
 <script src="random.js"></script>
-<script src="create_Items.js"></script>
-<script src="create_bottom_and_Right_Items.js"></script>
-<script src="game.js"></script>
+<script src="Create_Items_First.js"></script>
+<script src="create_bottom&rgh_First.js"></script>
+
+<script src="game_first.js"></script>
 </body>
 </html>
