--- a/game/game first.html
+++ b/game/game first.html
@@ -41,16 +41,20 @@
 
         <div id="bottomPanel"></div>
     </div>
-    <div id="contentRight"></div>
-
+    <div id="contentRightAll">
+        <div id="contentRight"></div>
+        <div id="contRight_help">
+            <img id="helper" src="http://th15.st.depositphotos.com/1003153/2443/v/170/depositphotos_24439645-Help-question-grunge-sticker.jpg">
+        </div>
+    </div>
 </div>
 
 
 <div id="timer">
 
-    <span class="mins">2</span>
-    <span> : </span>
-    <span class="sec">00</span>
+    <span class="mins"></span>
+    <span id="points"> </span>
+    <span class="sec"></span>
 
     <button>Start</button>
 
@@ -63,5 +67,8 @@
 <script src="create_bottom&rgh_First.js"></script>
 
 <script src="game_first.js"></script>
+
+<script src="helper.js"></script>
+
 </body>
 </html>
