--- a/game/game first.html
+++ b/game/game first.html
@@ -13,7 +13,7 @@
     <div id="contentLeft">
         <div id="contentMain">
 
-
+                   <!-- <img id="rot" src="images/blink2.png">-->
                     <map name="cat" id="mapCat">
                         <area shape="poly" coords="31, 77, 12, 60, 10, 42, 10, 24, 24, 17, 43, 7, 56, 1, 64, 11, 81, 17, 88, 27, 96, 39, 112, 44, 129, 67, 137, 92, 127, 107, 141, 113, 147, 131, 149, 141, 148, 144, 137, 144, 125, 141, 117, 136, 109, 125, 95, 130, 100, 140, 82, 147, 79, 138, 79, 128, 62, 118, 50, 106, 48, 119, 46, 127, 36, 123, 25, 107, 32, 103, 37, 90, 37, 84" />
                     </map>
@@ -67,6 +67,8 @@
 <script src="create_bottom&rgh_First.js"></script>
 
 <script src="game_first.js"></script>
+
+
 
 <script src="helper.js"></script>
 
