--- a/game/game first.html
+++ b/game/game first.html
@@ -41,24 +41,35 @@
 
         <div id="bottomPanel"></div>
     </div>
+
+
+
+
     <div id="contentRightAll">
+        <div id="timer">
+
+            <span class="mins"></span>
+            <span id="points"> </span>
+            <span class="sec"></span>
+
+            <button>Start</button>
+
+        </div>
         <div id="contentRight"></div>
         <div id="contRight_help">
-            <img id="helper" src="http://th15.st.depositphotos.com/1003153/2443/v/170/depositphotos_24439645-Help-question-grunge-sticker.jpg">
+            <img id="helper" src="images/hint.jpg">
+            <img src="images/hint2.jpg">
         </div>
     </div>
-</div>
 
 
-<div id="timer">
 
-    <span class="mins"></span>
-    <span id="points"> </span>
-    <span class="sec"></span>
 
-    <button>Start</button>
 
 </div>
+
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="timer.js"></script>
